--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "typechain": "^4.0.1",
     "typescript": "^4.1.3",
     "nodemon": "^2.0.20",
-    "mongodb": "^4.0.0 "
+    "mongodb": "^4.0.0 ",
+    "@cucumber/cucumber": "^8.6.0",
+    "@cucumber/pretty-formatter": "^1.0.0"
   },
   "comments": {
     "dependencies": "hardhat-solhint includes an old version of solhint, that's why specific solhint dependency is added"
@@ -86,8 +88,9 @@
     "test": "hardhat test",
     "deploy-goerli": "hardhat deploy --network goerli",
     "deploy-local": "hardhat deploy --network hardhat",
-    "start": "node src/server",
-    "dev-start": "nodemon -L src/server",
+    "start": "node src/main",
+    "dev-start": "nodemon -L src/main",
+    "cucumber": "./node_modules/.bin/cucumber-js ./test --tags 'not @wip' -f @cucumber/pretty-formatter",
     "release": "standard-version"
   }
 }
